--- a/lab1_intro/intro.ipynb
+++ b/lab1_intro/intro.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "There are many keyboard commands available in notebooks, and you can find them by clicking the keyboard icon along the top menu. The most important command to know is:\n",
     "\n",
-    "**command + Enter**\n",
+    "**ctrl + Enter**\n",
     "\n",
     "This command runs a cell. \n",
     "\n",
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(replace this cell with your own text)"
+    "hello world!"
    ]
   },
   {
@@ -92,8 +92,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello and welcome to FRS178!\n"
+     ]
+    }
+   ],
    "source": [
     "print('hello and welcome to FRS178!')"
    ]
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -205,7 +226,7 @@
     "\n",
     "print( list_of_names[-1] ) # print the last name\n",
     "\n",
-    "print( list_of_names[0::2] ) # print every other name, synatx is my_list[start:stop:increment]\n",
+    "print( list_of_names[::2] ) # print every other name, synatx is my_list[start:stop:increment]\n",
     "\n",
     "first_item = list_of_names[0]\n",
     "print('The first item is', first_item)\n",
@@ -213,6 +234,15 @@
     "first_two_items = list_of_names[0:2] # note the 0 : *2*\n",
     "print('The first two items are', first_two_items)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -223,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -249,15 +279,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The elements of a list can be just about anything, even lists themselves:"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -266,7 +289,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['a', 'b', 5], 'c']\n"
+      "[1, 2, 4]\n",
+      "['hi', 1, 2, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1, 2, 3] \n",
+    "\n",
+    "my_list[2] = 4\n",
+    "\n",
+    "print(my_list)\n",
+    "\n",
+    "my_list.insert(0, 'hi')\n",
+    "\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The elements of a list can be just about anything, even lists themselves:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['a', 'b', 5], 'c']\n",
+      "3\n"
      ]
     }
    ],
@@ -275,8 +334,19 @@
     "\n",
     "my_list_2 = [my_list_1, 'c']\n",
     "\n",
-    "print(my_list_2)"
+    "print(my_list_2)\n",
+    "\n",
+    "print"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -289,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -298,11 +368,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ALEX\n",
-      "BARRY\n",
+      "ZORBA\n",
+      "BEN\n",
       "CYNTHIA\n",
       "DAISY\n",
-      "EDWARD\n"
+      "EDWARD\n",
+      "XAVIER\n"
      ]
     }
    ],
@@ -313,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -369,6 +440,15 @@
     "from students import get_students # this will import the code necessary to load the students\n",
     "names,scores = get_students() # this uses the *get_students* function to load in the data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -382,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -403,6 +483,8 @@
     "    print('The name is Lisa.')\n",
     "elif name == 'ahmed':\n",
     "    print('The name is Ahmed.')\n",
+    "elif name == 'joe':\n",
+    "    print('name is joe')\n",
     "else:\n",
     "    print('The name is neither Lisa nor Ahmed.')\n",
     "    \n",
@@ -418,6 +500,26 @@
     "else:\n",
     "    print('The age must be between 25 and 30.')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -490,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -501,7 +603,7 @@
      "text": [
       "['a', 'b', 'c', 1]\n",
       "2\n",
-      "{'b': 2, 'a': 1, 'c': 5}\n"
+      "{'a': 1, 'c': 5, 'd': 6, 'b': 2}\n"
      ]
     }
    ],
@@ -515,6 +617,8 @@
     "print(my_dict['b'])\n",
     "\n",
     "my_dict['c'] = 5\n",
+    "\n",
+    "my_dict['d'] = 6\n",
     "\n",
     "print(my_dict)"
    ]
