--- a/lab2_tweepy/tweepy.ipynb
+++ b/lab2_tweepy/tweepy.ipynb
@@ -23,6 +23,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# a couple of useful tricks:\n",
+    "\n",
+    "print( 5 in [1, 2, 3] )\n",
+    "print( 5 in [1, 2, 5] )\n",
+    "\n",
+    "sentence = 'hello,this,is,a,sentence'\n",
+    "\n",
+    "split_sentence = sentence.split(',')\n",
+    "print ( split_sentence )\n",
+    "\n",
+    "joined_sentence = 'X'.join(split_sentence)\n",
+    "print ( joined_sentence )\n",
+    "\n",
+    "print( 'There are', sentence.count(','), 'commas in the sentence' )\n",
+    "print( 'There are', split_sentence.count(','), 'commas in the list of words' )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -364,7 +389,7 @@
    },
    "outputs": [],
    "source": [
-    "my_matrix = np.ones([10,20])\n",
+    "my_matrix = np.ones([8,12])\n",
     "\n",
     "print('The shape of this matrix is: ', my_matrix.shape)\n",
     "print(my_matrix)"
@@ -559,6 +584,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "people.loc[2,'name'] = 'Zorba'\n",
+    "\n",
+    "people"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -635,7 +673,7 @@
    "metadata": {},
    "source": [
     "<font color='green'>   \n",
-    "**Exercise**: the file `2016_donations.csv` contains approximately one million records of campaign donations from individuals in the 2015 and 2016 election cycles (it is real data from <a href=\"http://www.fec.gov/finance/disclosure/ftpdet.shtml#a2015_2016\">this source</a>).\n",
+    "**Exercise**: the file `2016_donations.csv` contains approximately one million records of campaign donations from individuals in the 2015 and 2016 election cycles (they are real data from <a href=\"http://www.fec.gov/finance/disclosure/ftpdet.shtml#a2015_2016\">this source</a>).\n",
     "\n",
     "* Load the data into a pandas DataFrame\n",
     "* Print the number of individual unique donors in the list\n",
@@ -738,6 +776,13 @@
    "outputs": [],
    "source": [
     "tweet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The available options for the Twitter API's search functionality is documented <a href=\"https://dev.twitter.com/rest/public/search\">here</a>."
    ]
   },
   {
